# decaf377

./: Cargo.toml  README.md
benches/: sqrt.rs
src/: lib.rs  sign.rs
src/ark_curve/: bls12_377.rs  edwards.rs  element.rs  elligator.rs  encoding.rs  invsqrt.rs  on_curve.rs  rand.rs
src/ark_curve/element/: affine.rs  ecc.rs  projective.rs
src/ark_curve/ops/: affine.rs  projective.rs
src/ark_curve/r1cs/: element.rs  fqvar_ext.rs  inner.rs  lazy.rs  ops.rs
src/fields/: fr.rs
src/fields/fp/: arkworks.rs
src/fields/fp/u32/: wrapper.rs
src/fields/fp/u64/: wrapper.rs
src/fields/fq/: arkworks.rs
src/fields/fq/u32/: wrapper.rs
src/fields/fq/u64/: wrapper.rs
src/fields/fr/: arkworks.rs  ecc.rs  ops.rs  serde.rs
src/fields/fr/u32/: wrapper.rs
src/fields/fr/u64/: wrapper.rs
src/min_curve/: element.rs  ops.rs
tests/: groth16_gadgets.rs
