[package]
name = "decaf377_plus"
version = "0.10.1"
authors = [
    "Henry de Valence <hdevalence@hdevalence.ca>",
    "redshiftzero <jen@penumbralabs.xyz>",
    "Mike Lodder <redmike7@gmail.com>",
]
description = "A prime-order group designed for use in SNARKs over BLS12-377"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["bls377", "decaf", "penumbra"]
homepage = "https://crates.io/crates/decaf377_plus"
documentation = "https://docs.rs/decaf377_plus"
repository = "https://github.com/LIT-Protocol/decaf377"

[dependencies]
blake2 = { version = "0.10", optional = true }
elliptic-curve = { version = "0.13", default-features = false, features = ["arithmetic", "bits", "ff", "group", "hash2curve"], optional = true }
frost-dkg = { version = "0.5.1", default-features = false, optional = true }
# no-alloc, no-std
cfg-if = "1.0"
hex = { version = "0.4", default-features = false }
subtle = { version = "2.6", default-features = false }
rand_core = { version = "0.6", default-features = false }
zeroize = { version = "1.8", default-features = false }
# no-std
num-bigint = { version = "0.4.4", optional = true, default-features = false }
# std
hashbrown = { version = "0.15", optional = true }
ark-relations = { version = "0.4", optional = true }
ark-r1cs-std = { version = "0.4", optional = true }
ark-std = { version = "0.4", optional = true }
ark-ec = { version = "0.4", optional = true }
ark-ff = { version = "0.4", optional = true }
ark-serialize = { version = "0.4", optional = true }
ark-bls12-377 = { version = "0.4", optional = true }
ark-ed-on-bls12-377 = { version = "0.4", optional = true }
ark-groth16 = { version = "0.4", optional = true }
ark-snark = { version = "0.4", optional = true }
once_cell = { version = "1.8", optional = true, default-features = false }
serdect = { version = "0.3.0-rc.0", optional = true }

# This matches what ark-std (a library for no_std compatibility) does, having
# a default feature of std - without the ark-std std feature, decaf377 doesn't
# compile
[features]
default = ["arkworks", "ecc-group"]
alloc = ["once_cell/alloc", "zeroize/alloc", "rand_core/alloc"]
std = [
    "alloc",
    "zeroize/std",
    "once_cell/std",
    "num-bigint/std",
    "hex/std",
    "subtle/std",
    "rand_core/std"
]
parallel = [
    "ark-ff/parallel",
    "ark-ec/parallel",
    "ark-groth16/parallel",
    "ark-std/parallel",
    "ark-r1cs-std/parallel",
]
# TODO: eventually, feature-gate all arkworks deps behind this feature.
arkworks = [
    "std",
    "ark-std",
    "ark-ec",
    "ark-ff",
    "ark-serialize",
    "ark-bls12-377",
    "ark-ed-on-bls12-377",
    "hashbrown",
]
ecc-group = ["blake2", "elliptic-curve", "frost-dkg"]
r1cs = ["arkworks", "ark-groth16", "ark-r1cs-std", "ark-relations", "ark-snark"]
serde = ["serdect"]
u32_backend = []

[dev-dependencies]
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand_chacha = "0.3"
anyhow = { version = "1.0" }
serde_json = "1.0"
serde_bare = "0.5"

[[test]]
name = "encoding"
required-features = ["arkworks"]

[[test]]
name = "groth16_gadgets"
required-features = ["r1cs"]

[[test]]
name = "operations"
required-features = ["arkworks"]

[[bench]]
name = "sqrt"
harness = false
required-features = ["arkworks"]

# Create profile for running checks in CI that are mostly "release" mode,
# but also checking the `debug_assert `lines.
[profile.ci]
inherits = "release"
debug-assertions = true
